--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,13 @@
         app:button_colors="@array/colors"
         app:button_icons="@array/icons"
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/circle_menu"
+        android:text="Circular Menu"
+        android:layout_marginTop="261dp"
+        android:layout_marginLeft="80dp"
+        android:textSize="22dp" />
 </RelativeLayout>
